<resources>
    <string name="app_name">Trubian</string>

    <!-- Strings related to signin and signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_verify_email">Verify Email</string>
    <string name="msg_register">Don\'t have an account?</string>
    <string name="prompt_enrollment_number">Enrollment Number</string>
    <string name="prompt_user_name">User Name</string>

    <string name="action_sign_out">Sign Out</string>

    <!--- Strings related to headings of every Android Activity -->
    <string name="activity_account">Account</string>
    <string name="activity_home">Home</string>
    <string name="activity_signin">Sign-In</string>
    <string name="activity_signup">Sign-Up</string>

    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reset_password">Reset Password</string>

</resources>
